fix: search autocomplete calculating wrong width due to missing overflow settings

--- a/web/themes/custom/cloudy/src/components/_search.scss
+++ b/web/themes/custom/cloudy/src/components/_search.scss
@@ -162,6 +162,7 @@ h1.homepage-title {
         overflow: hidden;
         input.form-autocomplete {
           padding: $cloudy-space-2;
+          overflow: hidden;
           font-weight: 600;
           &:focus {
             box-shadow: none;
